--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,7 +21,7 @@
         
   <div id="Stretch" >
  
-    <a href="http://localhost:3000/index"> 
+    <a href="/index"> 
       <img class='homeLogo' src="/images/rollforward.PNG" alt="rollforward report">
       <figcaption>Investment rollforward</figcaption>
     </a>
