sucessful heroku deployment

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,7 +14,7 @@
       <div class="nav-top">
         <nav role="navigation">
           <div class="nav-top-social">
-            <a href="http://localhost:3000/index/home" class="w-nav-link"> <img src="/images/564-5647199_home-sweet-home-clip-art.png" style="margin-left:10px;margin-top:10px"width="25" alt="home link"></a>
+            <a href="/" class="w-nav-link"> <img src="/images/564-5647199_home-sweet-home-clip-art.png" style="margin-left:10px;margin-top:10px"width="25" alt="home link"></a>
 
             <img style="float: right; width: 200px" src="/images/logo.png" alt="boston tehcie logo">
          
