--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,8 @@
            <th>Unrealized Gains/(Loss) </th>
            <th>Fees </th>
            <th>Ending Balance </th>
+           <th>document </th>
+
            <th style="background-color: #a5c926; text-align: center;">
                 <a style="background-color: #a5c926"href="/index/home"> 
                     <img src="/images/564-5647199_home-sweet-home-clip-art.png" width="25" alt="home link">
@@ -53,6 +55,8 @@
             <td><div class='currencyRender'><%=rollData.fees%></div></td>
        
             <td><div class='currencyRender'><%=rollData.endingBalance%></div></td>
+
+            <td><div><%=rollData.filename%></div></td>
 
             <td><form action='/index/<%= rollData.id%>?_method=DELETE' method='POST'>
                 <input class="hoverDelete" type="submit" value='Delete this item'> 
