trying some multer craziness

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,14 +1,14 @@
 
 <div id="Container">
   <div id="Copyright" class="nav-top">
-    <nav role="navigation">
+    <nav style="float: right role="navigation">
       <div style="float: right;"class="nav-top-social">
         
-        <a href="https://www.facebook.com/andrew.urquhart" target="_blank" class="social-link w-inline-block">
+        <a href="https://www.facebook.com/andrew.urquhart" target="blank" class="social-link w-inline-block">
           <img src="/images/facebook.svg" width="18" alt="facebook link">
         </a>
         
-        <a href="https://www.linkedin.com/in/andrew-urquhart/" target="_blank" class="social-link w-inline-block">
+        <a style="float: right;"href="https://www.linkedin.com/in/andrew-urquhart/" target="blank" class="social-link w-inline-block">
           <img src="/images/link.png" width="18"alt="linkedin link">
         </a>
                     
