--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,12 +7,11 @@
   <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
 
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
+   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
   
-  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>
+   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/gh/linways/table-to-excel@v1.0.4/dist/tableToExcel.js"></script>
-  
+   <script src="https://cdn.jsdelivr.net/gh/linways/table-to-excel@v1.0.4/dist/tableToExcel.js"></script>
   <title>Investment Tracker</title>
 </head>
 <body>
@@ -33,7 +32,18 @@
     </div>
 
 
-  
+    <div class="footer">
+      <div id="Copyright" class="nav-top">
+          <nav role="navigation">
+              <div class="nav-top-social">
+                <a href="https://www.facebook.com/andrew.urquhart" target="_blank" class="social-link w-inline-block"><img src="/images/facebook.svg" width="18" alt="facebook link"></a>
+                <a href="https://www.linkedin.com/in/andrew-urquhart/" target="_blank" class="social-link w-inline-block"><img src="/images/link.png" width="18"alt="linkedin link"></a>
+                <a href="https://github.com/BostonTechie" target="_blank" class="social-link w-inline-block"><img src="/images/git.png" width="18" alt="github link"></a>
+              </div>
+            </nav>
+      </div>
+     
+  </div>
 
 </body>
 </html>
