--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,14 @@
     padding: 0;
 }
 
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: right;
+}
+
 html, body, #Container
 {
     height: 98.5%;
