--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,45 +1,17 @@
-
-<div id="Container">
-  <div id="Copyright" class="nav-top">
-    <nav style="float: right role="navigation">
-      <div style="float: right;"class="nav-top-social">
-        
-        <a href="https://www.facebook.com/andrew.urquhart" target="blank" class="social-link w-inline-block">
-          <img src="/images/facebook.svg" width="18" alt="facebook link">
-        </a>
-        
-        <a style="float: right;"href="https://www.linkedin.com/in/andrew-urquhart/" target="blank" class="social-link w-inline-block">
-          <img src="/images/link.png" width="18"alt="linkedin link">
-        </a>
-                    
-        <a href="https://github.com/BostonTechie" target="_blank" class="social-link w-inline-block">
-          <img src="/images/git.png" width="18" alt="github link">
-        </a>
-      </div>
-    </nav>
-  </div>
-        
-  <div id="Stretch" >
- 
-    <a href="/index"> 
-      <img class='homeLogo' src="/images/rollforward.PNG" alt="rollforward report">
-      <figcaption>Investment rollforward</figcaption>
-    </a>
+<a href='/index'> 
+  <img class='homeLogo' src="/images/rollforward.PNG" alt="rollforward report">
+  <figcaption>Investment rollforward</figcaption>
+</a>
     
-    
-    
-    
-      
-   <a href="new">
-     <img class='homeLogo'  src="/images/reconciliation.PNG" alt="new entry button">
-     <figcaption>New entry</figcaption>
-   </a>
+<a href="new">
+  <img class='homeLogo'  src="/images/reconciliation.PNG" alt="new entry button">
+  <figcaption>New entry</figcaption>
+</a>
    
  
       
     
-  </div>
-</div>
+  
 
 
     
