--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         html, body {
-        height: 35%;
+        height: 55%;
         }
     </style>
 </head>
@@ -78,7 +78,7 @@
             
             <tr>
                 <th>File</th>
-                <div><td> <input type="file"  name="myupload" id='myupload'></td>
+                <div><td> <input class="requiredField" type="file"  name="myupload" id='myupload'></td>
             </tr>
             
             <tr>
@@ -92,15 +92,6 @@
 
     
 </form>
-
-
-
-
-
-
-
-
-
 
 <script src="/js/mathChecker.js"></script>
 
