--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,44 +4,57 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/style.css">
-
-   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
   
-   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>
+    <!-- css styling -->
+  <link rel="stylesheet" href="/css/style.css">
+ 
+  <!-- j query script -->
+  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+ 
+    <!-- j query datatables -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
+  
+  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>
 
-   <script src="https://cdn.jsdelivr.net/gh/linways/table-to-excel@v1.0.4/dist/tableToExcel.js"></script>
+   <!-- script for exporting excel -->
+  <script src="https://cdn.jsdelivr.net/gh/linways/table-to-excel@v1.0.4/dist/tableToExcel.js"></script>
+  
   <title>Investment Tracker</title>
 </head>
 <body>
 
    
-      <div class="nav-top">
-        <nav role="navigation">
-          <div class="nav-top-social">
-            <a href="/" class="w-nav-link"> <img src="/images/564-5647199_home-sweet-home-clip-art.png" style="margin-left:10px;margin-top:10px"width="25" alt="home link"></a>
+  <div class="nav-top">
+    <nav role="navigation">
+      <div class="nav-top-social">
+        <a href="/" class="w-nav-link"> <img src="/images/564-5647199_home-sweet-home-clip-art.png" style="margin-left:10px;margin-top:10px"width="25" alt="home link"></a>
 
-            <img style="float: right; width: 200px" src="/images/logo.png" alt="boston tehcie logo">
+        <img style="float: right; width: 200px" src="/images/logo.png" alt="boston tehcie logo">
          
             
-          </div>
-        </nav></div>
+      </div>
+    </nav>
+  </div>
       <!-- Other elements here -->
       <%- body %>  
     </div>
 
 
-    <div class="footer">
-      <div id="Copyright" class="nav-top">
-          <nav role="navigation">
-              <div class="nav-top-social">
-                <a href="https://www.facebook.com/andrew.urquhart" target="_blank" class="social-link w-inline-block"><img src="/images/facebook.svg" width="18" alt="facebook link"></a>
-                <a href="https://www.linkedin.com/in/andrew-urquhart/" target="_blank" class="social-link w-inline-block"><img src="/images/link.png" width="18"alt="linkedin link"></a>
-                <a href="https://github.com/BostonTechie" target="_blank" class="social-link w-inline-block"><img src="/images/git.png" width="18" alt="github link"></a>
-              </div>
-            </nav>
-      </div>
+  
+<div class="footer">
+
+        
+        <a href="https://www.facebook.com/andrew.urquhart" target="_blank" class="social-link w-inline-block">
+          <img src="/images/facebook.svg" width="18" alt="facebook link">
+        </a>
+        
+        <a href="https://www.linkedin.com/in/andrew-urquhart/" target="_blank" class="social-link w-inline-block">
+          <img src="/images/link.png" width="18"alt="linkedin link">
+        </a>
+                    
+        <a href="https://github.com/BostonTechie" target="_blank" class="social-link w-inline-block">
+          <img src="/images/git.png" width="18" alt="github link">
+        </a>
      
   </div>
 
