--- a/views/report.ejs
+++ b/views/report.ejs
@@ -1,10 +1,10 @@
-<h3>Investment Roll</h3>
-<button style="float: right;"onClick="window.location.href='/index/new'">New Investment Entry</button>
+<h3>All data report</h3>
+
   <button style="float: right;" id="btnExport">EXPORT Excel</button>
  
 
 
-<Table id='example' >
+<Table >
     <thead id="indexList">
     
        <tr>
