--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,11 @@
   <img class='homeLogo'  src="/images/reconciliation.PNG" alt="new entry button">
   <figcaption>New entry</figcaption>
 </a>
+
+<a href="report">
+  <img class='homeLogo'  src="/images/reports.PNG" alt="whole report">
+  <figcaption>All data report</figcaption>
+</a>
    
  
       
