--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
 </a>
 
 <a href="report">
-  <img class='homeLogo'  src="/images/reports.PNG" alt="whole report">
+  <img class='homeLogo'  src="/images/reconciliation.PNG" alt="whole report">
   <figcaption>All data report</figcaption>
 </a>
    
