--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 </a>
     
 <a href="new">
-  <img class='homeLogo'  src="/images/reportsimage.PNG" alt="new entry button">
+  <img class='homeLogo'  src="/images/reportsimage.png" alt="new entry button">
   <figcaption>New entry</figcaption>
 </a>
 
